# weatherAppD

./: .gitignore  FILES_OVERVIEW.md  README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py  data_analysis.py  visualizations.py  weather_api.py
