[tool.poetry]
name = "weather-analytics"
version = "1.0.0"
description = "Advanced Weather Analytics Application "
authors = ["danielz <danielz@law-yal.com"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
